fixed css issue causing autocomplete diff not showing up

--- a/src/main/webapp/externals/codemirror/theme/yasgui.css
+++ b/src/main/webapp/externals/codemirror/theme/yasgui.css
@@ -11,7 +11,9 @@
 	position: relative;
 	overflow: hidden;
 }
-
+.CodeMirror-hints {
+	z-index: 99999999 !important;
+}
 .CodeMirror-vscrollbar {
 	overflow:hidden;
 }
